--- a/TcpServer/TcpServer/TcpServer.vcxproj.filters
+++ b/TcpServer/TcpServer/TcpServer.vcxproj.filters
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Generated Files">
       <UniqueIdentifier>{71ED8ED8-ACB9-4CE9-BBE1-E00B30144E11}</UniqueIdentifier>
@@ -30,6 +30,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="server.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="tcpclientsocket.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -38,19 +41,22 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <QtMoc Include="tcpserver.h">
+    <QtMoc Include="server.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="tcpclientsocket.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="tcpserver.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
-    <CustomBuild Include="debug\moc_predefs.h.cbt">
-      <Filter>Generated Files</Filter>
-    </CustomBuild>
-    <CustomBuild Include="release\moc_predefs.h.cbt">
-      <Filter>Generated Files</Filter>
-    </CustomBuild>
+    
+    
+    
+    
+    
+    
   </ItemGroup>
 </Project>
