已敲完demo,调试已排除上一次的bug,关于程序乱码，汽车没有读到的bug,后续解决

--- a/MainWindow/MainWindow/MainWindow.vcxproj
+++ b/MainWindow/MainWindow/MainWindow.vcxproj
@@ -181,12 +181,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="connectdlg.cpp" />
+    <ClCompile Include="editdialog.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mainwindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="connectdlg.h">
     </QtMoc>
+    <ClInclude Include="editdialog.h" />
     <QtMoc Include="mainwindow.h">
     </QtMoc>
   </ItemGroup>
