--- a/MainWindow/MainWindow/MainWindow.vcxproj.filters
+++ b/MainWindow/MainWindow/MainWindow.vcxproj.filters
@@ -40,6 +40,9 @@
     <ClCompile Include="connectdlg.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="editdialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -51,6 +54,9 @@
     <QtMoc Include="connectdlg.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <ClInclude Include="editdialog.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <QtMoc Include="mainwindow.h">
       <Filter>Header Files</Filter>
     </QtMoc>
