模态对话框
模态对话框与非模态对话框

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ CMakeLists.txt.user*
 
 DataBase/dataBase1/widget.cpp
 DataBase/dataBase1/dataBase1.pro
+ModalWidget/ModalWidget/ModalWidget.VC.VC.opendb
