仿照微信使用拖拽发送文件的实现；
QTextEdit 中没有办法实现微信中完整的功能。待优化……

--- a/FileDragDrop/FileDragDrop/FileDragDrop/FileDragDrop.vcxproj
+++ b/FileDragDrop/FileDragDrop/FileDragDrop/FileDragDrop.vcxproj
@@ -114,11 +114,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="filedragdrop.cpp" />
+    <ClCompile Include="flowlayout.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mytextedit.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <QtMoc Include="filedragdrop.h" />
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="filedragdrop.ui" />
@@ -131,6 +129,15 @@
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
     </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="filedragdrop.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="flowlayout.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
